# delta-analytics

./: .gitignore  README.md  main.py  pyproject.toml  teste.ipynb
data/: Lista_de_aplicadores.json  Lista_de_cabos_legacy.json  Lista_de_calhas.json  Lista_de_criterios_Qualidade.json  Lista_de_mapa_corte.json  Lista_de_maquinas.json  Lista_de_master_kanban.json  Lista_de_rates_corte.json  Lista_de_rates_lead_prep.json  Lista_de_setup_corte.json  Lista_de_setup_lead_prep.json  Lista_de_terminais.json  Lista_de_zmm247.json  Lista_de_zpp260.json  monitor_log.json
utils/: funcoes.py
