[project]
name = "delta-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "psutil>=7.2.2",
    "pyad>=0.6.0",
    "pygetwindow>=0.0.9",
    "pyqt6>=6.10.2",
    "pyside6>=6.10.3",
    "pywin32>=311",
    "requests>=2.32.5",
    "ruff>=0.15.12",
    "screeninfo>=0.8.1",
]
